--- a/bysen32_script/1.4.dataset_gen_kfold.ipynb
+++ b/bysen32_script/1.4.dataset_gen_kfold.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATASET = \"train_jpg480max_wireless\"\n",
+    "DATASET = \"train_jpg480max\"\n",
     "DATASET_ROOT = '/media/ubuntu/Date12/TableStruct/new_data'\n",
     "\n",
     "\n",
