--- a/bysen32_script/2.2.result_pred2submit.ipynb
+++ b/bysen32_script/2.2.result_pred2submit.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,20 +110,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2857/2857 [00:13<00:00, 209.25it/s]\n"
+      "100%|██████████| 5187/5187 [00:31<00:00, 165.44it/s]\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "DATASET = \"test_A_jpg480max_wireless\"\n",
+    "DATASET = \"test_A_jpg480max\"\n",
     "\n",
     "\n",
     "pred_json_dir = f\"./output/structure_result/{DATASET}-pred.json\"\n",
@@ -162,13 +162,6 @@
     "# Q.用这个好像有问题？ A.少了一层submit.zip/submit\n",
     "# shutil.make_archive(submit_dir, 'zip', submit_dir)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
