--- a/bysen32_script/A3.inferAB_compare.ipynb
+++ b/bysen32_script/A3.inferAB_compare.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/5187 [00:00<?, ?it/s]"
+      "  0%|          | 0/2565 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5187/5187 [01:59<00:00, 43.24it/s] \n"
+      "100%|██████████| 2565/2565 [00:21<00:00, 120.59it/s]\n"
      ]
     }
    ],
@@ -31,8 +31,8 @@
     "# from prettyprinter import cpprint, set_default_style\n",
     "\n",
     "# pred_json_dirA = \"./output/structure_result/test_A-pred.json_0702_91.130\"\n",
-    "pred_json_dirA = \"./output/structure_result/test_A_jpg-pred.json_0704_91.935\"\n",
-    "pred_json_dirB = \"./output/structure_result/test_A_jpg-pred.json\"\n",
+    "pred_json_dirA = \"./output/structure_result/test_A_jpg480max_wireless-pred.json\"\n",
+    "pred_json_dirB = \"./output/structure_result/test_A_jpg480max-pred.json\"\n",
     "visualize_dirA = f\"{pred_json_dirA}_visualize\"\n",
     "visualize_dirB = f\"{pred_json_dirB}_visualize\"\n",
     "\n",
@@ -45,11 +45,17 @@
     "    json_file = os.path.basename(pred_json_path_A)\n",
     "    img_file = json_file.replace(\"-pred.json\", \".jpg\")\n",
     "    img_id = img_file.split(\".\")[0]\n",
+    "\n",
+    "    pred_json_path_B = os.path.join(pred_json_dirB, json_file)\n",
+    "    if not os.path.exists(pred_json_path_B):\n",
+    "        continue\n",
     "    dataA = json.load(open(pred_json_path_A, \"r\"))\n",
     "    dataB = json.load(open(os.path.join(pred_json_dirB, json_file), \"r\"))\n",
     "\n",
     "    img_path_A = os.path.join(visualize_dirA, f\"{img_id}.jpg\")\n",
     "    img_path_B = os.path.join(visualize_dirB, f\"{img_id}.jpg\")\n",
+    "    if not os.path.exists(img_path_A) or not os.path.exists(img_path_B):\n",
+    "        continue\n",
     "\n",
     "    # 比较layout排布\n",
     "    if dataA['layout'] != dataB['layout']:\n",
@@ -62,6 +68,13 @@
     "        image = np.concatenate([imgA, imgB], axis=1)\n",
     "        cv2.imwrite(os.path.join(diff_save_dir, f\"{img_id}.jpg\"), image)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
