--- a/bysen32_script/C1.ext_gt.txt_transform.ipynb
+++ b/bysen32_script/C1.ext_gt.txt_transform.ipynb
@@ -2,65 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 3000/3000 [00:24<00:00, 122.78it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "import os\n",
     "import numpy as np\n",
     "import json\n",
-    "from utils.teds_utils import html_to_table, format_table, format_tokens, format_layout, \\\n",
-    "    remove_empty_bboxes, get_html\n",
-    "from utils.format_translate import segmentation_to_bbox\n",
+    "from utils.format_translate import segmentation_to_bbox, html_to_table\n",
+    "from utils.utils import format_table, format_table_1, format_layout, format_tokens, remove_empty_bboxes, get_html\n",
     "import shutil\n",
     "from tqdm import tqdm\n",
-    "\n",
-    "\n",
-    "\n",
-    "def format_table_1(table): \n",
-    "    layout = table['layout']\n",
-    "    num = layout.max() + 1\n",
-    "    idx = 0\n",
-    "    new_cells = []\n",
-    "    cell_cord = set()\n",
-    "    for i, row in enumerate(layout):\n",
-    "        for j, cell_id in enumerate(row):\n",
-    "            if cell_id == -1:\n",
-    "                layout[i, j] = num + idx\n",
-    "                idx += 1\n",
-    "                empty_cell = dict(\n",
-    "                    col_start_idx=j,\n",
-    "                    row_start_idx=i,\n",
-    "                    col_end_idx=j,\n",
-    "                    row_end_idx=i,\n",
-    "                    transcript = '',\n",
-    "                    bbox = [0, 0, 0, 0],\n",
-    "                    segmentation = [[[0, 0], [0, 0], [0, 0], [0, 0]]]\n",
-    "                )\n",
-    "                new_cells.append(empty_cell)\n",
-    "            else:\n",
-    "                if cell_id not in cell_cord:\n",
-    "                    cell_cord.add(cell_id)\n",
-    "                    new_cells.append(table['cells'][cell_id])\n",
-    "\n",
-    "    new_layout = format_layout(layout)\n",
-    "    assert len(new_cells) == new_layout.max() + 1\n",
-    "\n",
-    "    table = dict(\n",
-    "        layout=new_layout,\n",
-    "        cells=new_cells\n",
-    "    )\n",
-    "\n",
-    "    return table\n",
     "\n",
     "\n",
     "def merge_token(token_list):\n",
@@ -82,7 +35,24 @@
     "            merge_token_list.append(token_list[pointer])\n",
     "            pointer += 1\n",
     "    merge_token_list.append('</tbody>')\n",
-    "    return merge_token_list\n",
+    "    return merge_token_list\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5000/5000 [00:18<00:00, 275.14it/s]\n",
+      "100%|██████████| 3000/3000 [00:22<00:00, 131.14it/s]\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "EXT_DATA_ROOT = \"/media/ubuntu/Date12/TableStruct/ext_data\"\n",
     "\n",
@@ -90,46 +60,39 @@
     "if os.path.exists(ext_data_save_dir):\n",
     "    shutil.rmtree(ext_data_save_dir)\n",
     "shutil.copytree(os.path.join(EXT_DATA_ROOT, \"img2\"), ext_data_save_dir)\n",
+    "shutil.copytree(os.path.join(EXT_DATA_ROOT, \"img1\"), ext_data_save_dir, dirs_exist_ok=True)\n",
     "\n",
-    "ext_gt_txt_file = os.path.join(EXT_DATA_ROOT, \"gt2.txt\")\n",
-    "gt_data = open(ext_gt_txt_file, 'r').readlines()\n",
-    "for data in tqdm(gt_data):\n",
-    "    data = eval(data)\n",
     "\n",
-    "    imgname = os.path.basename(data['filename'])\n",
+    "for gt_file in [\"gt1.txt\", \"gt2.txt\"]:\n",
+    "    ext_gt_txt_file = os.path.join(EXT_DATA_ROOT, gt_file)\n",
+    "    gt_data = open(ext_gt_txt_file, 'r').readlines()\n",
+    "    for data in tqdm(gt_data):\n",
+    "        data = eval(data)\n",
     "\n",
-    "    bboxes = []\n",
-    "    for cell in data['html']['cells']:\n",
-    "        bboxes.append(segmentation_to_bbox(cell['bbox']))\n",
-    "    bboxes = remove_empty_bboxes(bboxes) \n",
+    "        imgname = os.path.basename(data['filename'])\n",
+    "        img_id = imgname.split(\".\")[0]\n",
     "\n",
-    "    tokens = data['html']['structure']['tokens']\n",
-    "    tokens = format_tokens(','.join(tokens))\n",
-    "    tokens = merge_token(tokens)\n",
+    "        cells = []\n",
+    "        for idx, cell in enumerate(data['html']['cells']):\n",
+    "            bbox = segmentation_to_bbox(cell['bbox'])\n",
+    "            tokens = '' if cell['tokens'] == [] else f'{idx}'\n",
+    "            cells.append(dict(bbox=bbox, tokens=tokens))\n",
     "\n",
-    "    html = get_html(tokens, bboxes, bbox_format='xyxy')\n",
-    "    table = html_to_table(html)\n",
+    "        tokens = data['html']['structure']['tokens']\n",
+    "        if '<thead>' not in tokens and '<tbody>' not in tokens:\n",
+    "            tokens.insert(0, '<tbody>')\n",
+    "            tokens.append('</tbody>')\n",
+    "        # tokens = format_tokens(','.join(tokens))\n",
+    "        # tokens = merge_token(tokens)\n",
+    "\n",
+    "        html = dict(html=dict(structure=dict(tokens=tokens), cells=cells))\n",
+    "\n",
+    "        table = html_to_table(html)\n",
+    "        table_new = format_table(table)\n",
     "        \n",
-    "    try:\n",
-    "        table_new = format_table(table)\n",
-    "    except:\n",
-    "        print(\"format_table error\")\n",
-    "        ### 去除layout中的-1\n",
-    "        table = format_table_1(table)\n",
-    "        table_new = format_table(table)\n",
-    "    \n",
-    "    img_id = imgname.split(\".\")[0]\n",
-    "    save_path = os.path.join(ext_data_save_dir, f'{img_id}.json')\n",
-    "\n",
-    "    json.dump(table_new, open(save_path, 'w'), indent=4, ensure_ascii=False)\n"
+    "        save_path = os.path.join(ext_data_save_dir, f'{img_id}.json')\n",
+    "        json.dump(table_new, open(save_path, 'w'), indent=4, ensure_ascii=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
