--- a/bysen32_script/C2.dataset_gen_kfold.ipynb
+++ b/bysen32_script/C2.dataset_gen_kfold.ipynb
@@ -22,14 +22,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATASET = \"train_wireless\"\n",
+    "DATASET = \"train\"\n",
     "DATASET_ROOT = '/media/ubuntu/Date12/TableStruct/ext_data'\n",
     "\n",
     "\n",
-    "LABEL_DATA_DIR = os.path.join(DATASET_ROOT, f\"{DATASET}\")\n",
+    "label_data_dir = os.path.join(DATASET_ROOT, f\"{DATASET}\")\n",
     "FOLD_K = 10\n",
     "\n",
-    "label_files = sorted(glob(os.path.join(LABEL_DATA_DIR, '*.json')))\n",
+    "label_files = sorted(glob(os.path.join(label_data_dir, '*.json')))\n",
     "img_files = list(map(lambda x: os.path.basename(x).replace(\".json\", \".jpg\"), label_files))\n",
     "img_files = np.array(img_files)\n",
     "\n",
