--- a/bysen32_script/1.4.dataset_gen_kfold.ipynb
+++ b/bysen32_script/1.4.dataset_gen_kfold.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,16 +27,20 @@
     "\n",
     "\n",
     "LABEL_DATA_DIR = os.path.join(DATASET_ROOT, f\"{DATASET}_gt_json\")\n",
+    "IMG_DATA_DIR = os.path.join(DATASET_ROOT, DATASET)\n",
     "FOLD_K = 10\n",
     "\n",
-    "label_files = sorted(glob(os.path.join(LABEL_DATA_DIR, '*-gt.json')))\n",
-    "img_files = list(map(lambda x: os.path.basename(x).replace(\"-gt.json\", \".jpg\"), label_files))\n",
-    "img_files = np.array(img_files)\n",
+    "raise Exception(\"Dont run this script anymore!!!\")\n",
+    "\n",
+    "image_files = sorted(glob(os.path.join(IMG_DATA_DIR, '*.jpg')))\n",
+    "image_names = list(map(lambda x: os.path.basename(x).replace(\".jpg\", \"\"), image_files))\n",
+    "image_names = np.array(image_names)\n",
+    "\n",
     "\n",
     "kf = KFold(n_splits=FOLD_K, shuffle=True, random_state=42)\n",
-    "for i, (train_idx, test_idx) in enumerate(kf.split(img_files)):\n",
-    "    train_set = img_files[train_idx]\n",
-    "    valid_set = img_files[test_idx]\n",
+    "for i, (train_idx, test_idx) in enumerate(kf.split(image_names)):\n",
+    "    train_set = image_names[train_idx]\n",
+    "    valid_set = image_names[test_idx]\n",
     "    fold_data = dict(train=train_set.tolist(), valid=valid_set.tolist())\n",
     "\n",
     "    fold_json_path = os.path.join(DATASET_ROOT, f'{DATASET}_{FOLD_K}fold{i}.json')\n",
