--- a/bysen32_script/A1.label_visualize.ipynb
+++ b/bysen32_script/A1.label_visualize.ipynb
@@ -10,9 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 12104/12104 [04:53<00:00, 41.19it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import os\n",
@@ -61,7 +69,7 @@
     "    cv2.imwrite(dst_img_path, src_img)\n",
     "\n",
     "# 数据集名称\n",
-    "DATASET = \"train_jpg480max_wireless\"\n",
+    "DATASET = \"train_jpg480max\"\n",
     "# 输入数据目录\n",
     "img_data_dir    = f\"/media/ubuntu/Date12/TableStruct/new_data/{DATASET}\"\n",
     "json_data_dir    = f\"/media/ubuntu/Date12/TableStruct/new_data/{DATASET}_gt_json\"\n",
