--- a/bysen32_script/2.2.result_pred2submit.ipynb
+++ b/bysen32_script/2.2.result_pred2submit.ipynb
@@ -115,20 +115,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5187/5187 [00:29<00:00, 173.21it/s]\n"
+      "100%|██████████| 2367/2367 [00:15<00:00, 152.66it/s]\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "DATASET = \"test_A_jpg480max\"\n",
+    "DATASET = \"test_A_jpg480max_wire\"\n",
     "\n",
     "\n",
     "pred_json_dir = f\"./output/structure_result/{DATASET}-pred.json\"\n",
     "jpg_json_path = f\"/media/ubuntu/Date12/TableStruct/new_data/{DATASET}.json\"\n",
     "jpg_info = json.load(open(jpg_json_path, 'r'))\n",
     "\n",
-    "submit_dir = f\"./output/structure_result/{DATASET}_submit\"\n",
+    "submit_dir = f\"./output/structure_result/{DATASET}_submit_97.43\"\n",
     "if os.path.exists(submit_dir):\n",
     "    shutil.rmtree(submit_dir)\n",
     "Path(submit_dir).mkdir(parents=True, exist_ok=True)\n",
