--- a/bysen32_script/A1.label_visualize.ipynb
+++ b/bysen32_script/A1.label_visualize.ipynb
@@ -17,7 +17,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 12104/12104 [04:53<00:00, 41.19it/s]\n"
+      "100%|██████████| 12104/12104 [08:22<00:00, 24.08it/s]\n"
      ]
     }
    ],
@@ -74,7 +74,7 @@
     "img_data_dir    = f\"/media/ubuntu/Date12/TableStruct/new_data/{DATASET}\"\n",
     "json_data_dir    = f\"/media/ubuntu/Date12/TableStruct/new_data/{DATASET}_gt_json\"\n",
     "# 输出目录\n",
-    "pred_visual_dir = f\"./output/structure_result/{DATASET}-visualize/\"\n",
+    "pred_visual_dir = f\"./output/structure_result/{DATASET}_visualize/\"\n",
     "if os.path.exists(pred_visual_dir):\n",
     "    shutil.rmtree(pred_visual_dir)\n",
     "Path(pred_visual_dir).mkdir(parents=True, exist_ok=True)\n",
