--- a/bysen32_script/A2.a.infer_visualize.ipynb
+++ b/bysen32_script/A2.a.infer_visualize.ipynb
@@ -10,14 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5187/5187 [01:59<00:00, 43.33it/s]  \n"
+      "100%|██████████| 2367/2367 [00:15<00:00, 149.81it/s]\n"
      ]
     }
    ],
@@ -70,7 +70,7 @@
     "    cv2.imwrite(dst_img_path, src_img)\n",
     "\n",
     "# 参数：数据集名称\n",
-    "DATASET = \"test_A_jpg480max\"\n",
+    "DATASET = \"test_A_jpg480max_wire\"\n",
     "# 输入数据目录\n",
     "img_data_dir    = f\"/media/ubuntu/Date12/TableStruct/new_data/{DATASET}\"\n",
     "pred_json_dir   = f\"./output/structure_result/{DATASET}-pred.json/\"\n",
