--- a/bysen32_script/B1.debug_single_image_visualize.ipynb
+++ b/bysen32_script/B1.debug_single_image_visualize.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,6 +68,18 @@
     "    plt.title(f\"{img_name}: {key}\")\n",
     "    plt.imshow(last_img)\n",
     "    plt.show()\n",
+    "\n",
+    "def table_line01_visualize(img_name, src_img, table, key='row', only_last=False):\n",
+    "    last_img = np.zeros_like(src_img)\n",
+    "    for idx, row in enumerate(table[key]):\n",
+    "        pts = np.array(row, dtype=np.int32)\n",
+    "        # cv2.polylines(last_img, [pts], True, (255, 255, 255), 1)\n",
+    "        cv2.fillPoly(last_img, [pts], (255, 255, 255))\n",
+    "    \n",
+    "    plt.title(f\"{img_name}: {key}\")\n",
+    "    plt.imshow(last_img)\n",
+    "    plt.show()\n",
+    "\n",
     "\n",
     "def label_visualize(img_name, src_img, label):\n",
     "    for cell in label['cells']:\n",
@@ -128,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,6 +205,9 @@
     "img_id = '10300'\n",
     "img_id = '11575' # too many hard to debug\n",
     "img_id = '11721' # col label error\n",
+    "img_id = '07533' # 列标注错误\n",
+    "img_id = '12099'\n",
+    "img_id = '06632'\n",
     "\n",
     "\n",
     "\n",
@@ -204,16 +219,17 @@
     "\n",
     "src_img = cv2.imread(jpg_path)\n",
     "table = json.load(open(json_path, 'r'))\n",
-    "table['is_wireless'] = True\n",
+    "# table['is_wireless'] = True\n",
     "\n",
     "# if not table2label.table_valid(table):\n",
     "#     print(\"table_valid error!\", img_id)\n",
     "# # table = table2label.fix_table_error(table)\n",
     "\n",
-    "table_visualize(img_id, src_img, table, 'row', only_last=False)\n",
-    "table_visualize(img_id, src_img, table, 'col', only_last=False)\n",
-    "table_visualize(img_id, src_img, table, 'line', only_last=True)\n",
-    "table_visualize(img_id, src_img, table, 'cell', only_last=True)\n",
+    "# table_visualize(img_id, src_img, table, 'row', only_last=False)\n",
+    "# table_visualize(img_id, src_img, table, 'col', only_last=False)\n",
+    "# table_visualize(img_id, src_img, table, 'line', only_last=True)\n",
+    "# table_visualize(img_id, src_img, table, 'cell', only_last=True)\n",
+    "table_line01_visualize(img_id, src_img, table, 'line', only_last=False)\n",
     "layout = table2label.table2layout(table)\n",
     "label = table2label.table2label(table)\n",
     "label_visualize(img_id, src_img, label)\n",
