--- a/bysen32_script/A3.inferAB_compare.ipynb
+++ b/bysen32_script/A3.inferAB_compare.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  2%|▏         | 84/5187 [00:00<00:06, 838.24it/s]"
+      "  0%|          | 0/2387 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5187/5187 [00:08<00:00, 621.18it/s]\n"
+      "100%|██████████| 2387/2387 [05:18<00:00,  7.50it/s]\n"
      ]
     }
    ],
@@ -31,8 +31,9 @@
     "# from prettyprinter import cpprint, set_default_style\n",
     "\n",
     "# pred_json_dirA = \"./output/structure_result/test_A-pred.json_0702_91.130\"\n",
-    "pred_json_dirA = \"./output/structure_result/test_A_jpg480max_wireless-pred.json\"\n",
+    "pred_json_dirA = \"./output/structure_result/test_A_jpg480max_wire-pred.json\"\n",
     "pred_json_dirB = \"./output/structure_result/test_A_jpg480max-pred.json\"\n",
+    "pred_json_dirB = \"./output/structure_result/wire_best\"\n",
     "visualize_dirA = f\"{pred_json_dirA}_visualize\"\n",
     "visualize_dirB = f\"{pred_json_dirB}_visualize\"\n",
     "\n",
