--- a/bysen32_script/2.2.result_pred2submit.ipynb
+++ b/bysen32_script/2.2.result_pred2submit.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,27 +108,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2367/2367 [00:15<00:00, 152.66it/s]\n"
+      "  1%|          | 18/2819 [00:00<00:17, 161.23it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2819/2819 [00:13<00:00, 213.10it/s]\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "DATASET = \"test_A_jpg480max_wire\"\n",
-    "\n",
+    "DATASET = \"test_A_jpg480max_wireless\"\n",
     "\n",
     "pred_json_dir = f\"./output/structure_result/{DATASET}-pred.json\"\n",
     "jpg_json_path = f\"/media/ubuntu/Date12/TableStruct/new_data/{DATASET}.json\"\n",
     "jpg_info = json.load(open(jpg_json_path, 'r'))\n",
     "\n",
-    "submit_dir = f\"./output/structure_result/{DATASET}_submit_97.43\"\n",
+    "submit_dir = f\"./output/structure_result/{DATASET}_submit\"\n",
     "if os.path.exists(submit_dir):\n",
     "    shutil.rmtree(submit_dir)\n",
     "Path(submit_dir).mkdir(parents=True, exist_ok=True)\n",
