--- a/bysen32_script/A2.e.detect_visualize_black.ipynb
+++ b/bysen32_script/A2.e.detect_visualize_black.ipynb
@@ -10,15 +10,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1410/1410 [00:04<00:00, 282.58it/s]\n",
-      "100%|██████████| 1410/1410 [00:05<00:00, 278.91it/s]\n"
+      "  0%|          | 7/1410 [00:00<00:21, 66.19it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1410/1410 [00:13<00:00, 103.59it/s]\n",
+      "100%|██████████| 1410/1410 [00:12<00:00, 115.72it/s]\n"
      ]
     }
    ],
@@ -72,7 +79,7 @@
     "    cv2.imwrite(dst_img_path, src_img)\n",
     "\n",
     "\n",
-    "DATASET = \"test_A_jpg480max_wireless\"\n",
+    "DATASET = \"test_A_jpg480max\"\n",
     "PRED_PKL_DIR = f\"../output/end2end_val_result\"\n",
     "img_data_dir    = f\"/media/ubuntu/Date12/TableStruct/new_data/{DATASET}\"\n",
     "pred_visual_dir = f\"./output/end2end_val_result/{DATASET}-detect_visualize/\"\n",
@@ -96,7 +103,7 @@
     "            bbox = bbox.astype(np.int32).tolist()\n",
     "            x1, y1, x2, y2 = bbox[0], bbox[1], bbox[4], bbox[5]\n",
     "            # cv2.rectangle(img_array, (x1, y1, x2-x1, y2-y1), (0, 0, 255), 1)\n",
-    "            cv2.fillPoly(img_array, [np.array(bbox).reshape(-1, 2)], (255, 255, 255))\n",
+    "            cv2.fillPoly(img_array, [np.array(bbox).reshape(-1, 2)], (128, 128, 128))\n",
     "        dst_img_path = os.path.join(pred_visual_dir, file_name)\n",
     "        cv2.imwrite(dst_img_path, img_array)\n",
     "\n"
