--- a/bysen32_script/A2.a.infer_visualize.ipynb
+++ b/bysen32_script/A2.a.infer_visualize.ipynb
@@ -10,14 +10,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2367/2367 [00:15<00:00, 149.81it/s]\n"
+      "  0%|          | 4/2820 [00:00<01:36, 29.31it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2820/2820 [01:40<00:00, 28.11it/s]\n"
      ]
     }
    ],
@@ -70,9 +77,9 @@
     "    cv2.imwrite(dst_img_path, src_img)\n",
     "\n",
     "# 参数：数据集名称\n",
-    "DATASET = \"test_A_jpg480max_wire\"\n",
+    "DATASET = \"test_A_jpg480max_wireless\"\n",
     "# 输入数据目录\n",
-    "img_data_dir    = f\"/media/ubuntu/Date12/TableStruct/new_data/{DATASET}\"\n",
+    "img_data_dir    = f\"/media/ubuntu/Date12/TableStruct/new_data/{DATASET}_ori\"\n",
     "pred_json_dir   = f\"./output/structure_result/{DATASET}-pred.json/\"\n",
     "# 输出目录\n",
     "pred_visual_dir = f\"./output/structure_result/{DATASET}-pred.json_visualize/\"\n",
